--- a/src/app/modules/home/components/catalog-section/catalog-section.component.html
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.html
@@ -1,7 +1,8 @@
 <div>
 	<div class="d-flex justify-content-between">
 		<div id="catalog-section-label">Baju Pria</div>
-		<div id="catalog-section-lihat-semua">Lihat Semua</div>
+		<div id="catalog-section-lihat-semua"
+			(click)="lihatSemua()">Lihat Semua</div>
 	</div>
 	<div class="white-space"></div>
 	<div class="d-flex">
