--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
@@ -1,21 +1,20 @@
 <div id="mbel">
 	<div id="loc-header">Alamat
 	</div>
-
-	<div *ngFor="let items of datalocation; let i = index">
+	<div *ngFor="let item of datalocation; let i = index">
 		<div id="loc-hr-top">
 		</div>
 		<div id="loc-body">
-			<div id="body_address_1">{{items.address_name}}</div>
+			<div id="body_address_1">{{item.address_name}}</div>
 
 			<div id="loc-body-address">
-				<div id="body_address_2">{{items.address}}</div>
+				<div id="body_address_2">{{item.address_detail}}</div>
 			</div>
 			<div id="loc-body-manuver">
-				<ng-template *ngIf="items.checked=='checked';then checkedaddress else uncheckedaddress"></ng-template>
+				<ng-template *ngIf="item.is_head_office==1;then checkedaddress else uncheckedaddress"></ng-template>
 				<ng-template #checkedaddress>
 					<div id="loc-body-button">
-						<span class="button-location">{{items.address_utama}}</span>
+						<span class="button-location">Utama</span>
 					</div>
 				</ng-template>
 				<ng-template #uncheckedaddress>
@@ -28,7 +27,7 @@
 
 					<label class="radiyo">
 						<input type="radio"
-							checked="{{items.checked}}"
+							checked="{{item.is_head_office==1}}"
 							name="radio">
 						<span class="checkmark"></span>
 					</label>
