--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -106,7 +106,7 @@
 						<img src="../../../../assets/image/icons/wallet.svg">
 					</div>
 					<div class="div-saldo-right">
-						Rp. {{datacompany.credit_rp}}
+						Rp. {{datacompany.credit_rp | number}}
 					</div>
 				</div>
 
