--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
@@ -58,7 +58,7 @@
 #loc-body-address {
 	position: relative;
 	float: left;
-	width: 70%;
+	width: 75%;
 	color: #606060;
 	font-family: $secondary-font;
 	font-style: normal;
@@ -70,7 +70,7 @@
 #loc-body-manuver {
 	position: relative;
 	float: left;
-	width: 30%;
+	width: 22%;
 	border: solid blue 0px;
 }
 
@@ -79,8 +79,17 @@
 	float: left;
 	margin: 0px;
 	padding-left: 10px;
-	width:45%;
+	width:85%;
 }
+
+#loc-body-checkbox {
+	width:12%;
+	position: relative;
+	float: left;
+	margin: 0px;
+	padding-left: 10px;
+}
+
 
 #loc-body-button-unchecked {
 	position: relative;
@@ -96,7 +105,7 @@
 	width: 89px;
 	height: 28px;
 	padding: 5px 15px 5px 15px;
-	border-radius: 10px;
+	border-radius: 23px;
 	color: #ffffff;
 	font-size: 14px;
 	border-radius: 10px;
@@ -105,7 +114,10 @@
 	font-weight: bold;
 	font-size: 16px;
 	line-height: 19px;
-	/* identical to box height */
+
+	background: linear-gradient(0.36deg, rgba(239, 33, 58, 0.75) 21.28%, rgba(226, 23, 59, 0.75) 68.11%, rgba(218, 19, 19, 0.75) 123.54%);
+box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.25);
+border-radius: 23px;
 	text-align: center;
 }
 
@@ -128,12 +140,6 @@
 	text-align: center;
 }
 
-#loc-body-checkbox {
-	position: relative;
-	float: left;
-	margin: 0px;
-	padding-left: 30px;
-}
 
 #loc-hr-bottom {
 	position: relative;
