--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
@@ -45,7 +45,8 @@
 	<!-- 
 		<div id="loc-hr-bottom">
 	</div> -->
-	<div id="loc-bottom">
+	<div id="loc-bottom"
+		(click)="goToAkun()">
 		+ Tambah Alamat Baru
 	</div>
 </div>
