--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
@@ -79,7 +79,7 @@
 	float: left;
 	margin: 0px;
 	padding-left: 10px;
-	width:45%;
+	width: 45%;
 }
 
 #loc-body-button-unchecked {
@@ -87,7 +87,7 @@
 	float: left;
 	margin: 0px;
 	padding-left: 10px;
-	width:45%;
+	width: 45%;
 }
 
 .button-location {
@@ -156,6 +156,7 @@
 	font-weight: bold;
 	line-height: 19px;
 	font-size: 16px;
+	cursor: pointer;
 }
 
 .radiyo {
