fix total price in cart

--- a/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
+++ b/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
@@ -45,7 +45,7 @@
 							<div>{{qtyObject?.qty}} Barang</div>
 						</div>
 					</div>
-					<div id="item-price">{{productDetail?.sell_price}}</div>
+					<div id="item-price">{{productDetail?.sell_price * qtyObject?.qty}}</div>
 				</div>
 
 			</div>
