--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -3,7 +3,7 @@
 	<div class="font1">Kredit Tersedia</div>
 	<div class="d-flex justify-content-between harga-per-item">
 		<div class="font1">Rp</div>
-		<div class="font1">99.999.999</div>
+		<div class="font1">{{pertotalan.saldo|rupiah}}</div>
 	</div>
 </div>
 <div id="div-price-below">
@@ -11,7 +11,7 @@
 		<div class="font1">Total Belanja</div>
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp</div>
-			<div class="font1">73.500.000</div>
+			<div class="font1">{{pertotalan.totalPrice|rupiah}}</div>
 		</div>
 
 	</div>
@@ -23,7 +23,7 @@
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp</div>
-			<div class="font1">500.000</div>
+			<div class="font1">{{pertotalan.totalFee|rupiah}}</div>
 		</div>
 	</div>
 
@@ -35,7 +35,7 @@
 		<div class="font2">Sub Total</div>
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font2">Rp</div>
-			<div class="font2">74.000.000</div>
+			<div class="font2">{{pertotalan.subtotal|rupiah}}</div>
 		</div>
 	</div>
 
@@ -46,7 +46,7 @@
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp</div>
-			<div class="font1">7.400.000</div>
+			<div class="font1">{{pertotalan.ppn|rupiah}}</div>
 		</div>
 	</div>
 
@@ -57,7 +57,7 @@
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp</div>
-			<div class="font1">-148.000</div>
+			<div class="font1">{{pertotalan.ppn3|rupiah}}</div>
 		</div>
 	</div>
 
@@ -68,7 +68,7 @@
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div class="font1">Rp</div>
-			<div class="font1">1.000.000</div>
+			<div class="font1">{{pertotalan.ongkir|rupiah}}</div>
 		</div>
 	</div>
 
@@ -82,7 +82,7 @@
 
 		<div class="d-flex justify-content-between harga-per-item">
 			<div id="label-ringkasan">Rp</div>
-			<div id="label-ringkasan">82.252.000</div>
+			<div id="label-ringkasan">{{pertotalan.grandtotal|rupiah}}</div>
 		</div>
 	</div>
 
