--- a/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
@@ -32,6 +32,7 @@
 				<div class="d-flex">
 					<wsh wide="57px"></wsh>
 					<box-cart-price [pertotalan]="pertotalan"
+						[selectedItems]="selectedItems"
 						buttonLabel="Selanjutnya"
 						[buttonDisable]="adaItemDipilih()"></box-cart-price>
 				</div>
