--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -2,7 +2,7 @@
 	class="d-flex align-items-center justify-content-between">
 	<div class="font1">Kredit Tersedia</div>
 	<div class="d-flex justify-content-between harga-per-item">
-		<div class="font1">Rp</div>
+		<div class="font1"></div>
 		<div class="font1">{{pertotalan.saldo|rupiah}}</div>
 	</div>
 </div>
@@ -10,7 +10,7 @@
 	<div class="d-flex justify-content-between">
 		<div class="font1">Total Belanja</div>
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp</div>
+			<div class="font1"></div>
 			<div class="font1">{{pertotalan.totalPrice|rupiah}}</div>
 		</div>
 
@@ -22,7 +22,7 @@
 		<div class="font1">Fee</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp</div>
+			<div class="font1"></div>
 			<div class="font1">{{pertotalan.totalFee|rupiah}}</div>
 		</div>
 	</div>
@@ -34,7 +34,7 @@
 	<div class="d-flex justify-content-between">
 		<div class="font2">Sub Total</div>
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font2">Rp</div>
+			<div class="font2"></div>
 			<div class="font2">{{pertotalan.subtotal|rupiah}}</div>
 		</div>
 	</div>
@@ -45,7 +45,7 @@
 		<div class="font1">PPN</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp</div>
+			<div class="font1"></div>
 			<div class="font1">{{pertotalan.ppn|rupiah}}</div>
 		</div>
 	</div>
@@ -56,7 +56,7 @@
 		<div class="font1">PPh 23</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp</div>
+			<div class="font1"></div>
 			<div class="font1">{{pertotalan.ppn3|rupiah}}</div>
 		</div>
 	</div>
@@ -67,7 +67,7 @@
 		<div class="font1">Total Ongkos Kirim</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp</div>
+			<div class="font1"></div>
 			<div class="font1">{{pertotalan.ongkir|rupiah}}</div>
 		</div>
 	</div>
@@ -81,7 +81,7 @@
 		<div id="label-ringkasan">Grand Total</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div id="label-ringkasan">Rp</div>
+			<div id="label-ringkasan"></div>
 			<div id="label-ringkasan">{{pertotalan.grandtotal|rupiah}}</div>
 		</div>
 	</div>
