--- a/src/app/modules/approval/components/address-notif/address-notif.component.html
+++ b/src/app/modules/approval/components/address-notif/address-notif.component.html
@@ -1,5 +1,5 @@
 <div class="address-button-label"
 	[ngClass]="selected == label ? 'selected' : ''"
 	(click)="klik()">
-	<span class="asoy">{{label.name}}</span>
+	<span class="asoy">{{label.address_name}}</span>
 </div>
