--- a/src/app/modules/approval/components/address-warn-notif/address-warn-notif.component.html
+++ b/src/app/modules/approval/components/address-warn-notif/address-warn-notif.component.html
@@ -1,3 +1,3 @@
 <div class="warn-notif"
-	[ngClass]="{'show':label.qty > 0,'hide':label.qty == 0}">
+	[ngClass]="{'show':label.request_total > 0,'hide':label.request_total == 0}">
 </div>
