--- a/src/app/modules/approval/components/item-summary-dropdown/item-summary-dropdown.component.html
+++ b/src/app/modules/approval/components/item-summary-dropdown/item-summary-dropdown.component.html
@@ -29,16 +29,16 @@
 		id="style-2"
 		#scrollMe>
 		<div>
-			<div *ngFor="let waitingApproval of list;let i = index">
+			<div *ngFor="let AddressELement of list;let i = index">
 				<div id="item-row"
-					class="d-flex justify-content-between {{waitingApproval.name}}"
-					[ngClass]="selected == waitingApproval ? 'selected'  : '' "
-					(click)="clickWaiting(waitingApproval);myDrop.close();">
+					class="d-flex justify-content-between {{AddressELement.address_name}}"
+					[ngClass]="selected == AddressELement ? 'selected'  : '' "
+					(click)="clickWaiting(AddressELement);myDrop.close();">
 					<div class="item-dropdown-class">
-						{{waitingApproval.name}}
+						{{AddressELement.address_name}}
 					</div>
 					<div class="item-dropdown-class">
-						{{waitingApproval.qty}} Barang
+						{{AddressELement.request_total}} Barang
 					</div>
 				</div>
 				<wsv wide="15px"></wsv>
