--- a/src/app/shared/components/item-desc/item-desc.component.html
+++ b/src/app/shared/components/item-desc/item-desc.component.html
@@ -1,9 +1,9 @@
 <div id="item-name">
-	Macbook Pro 2020 13" Inch 2.0 GHZ i5 10th Gen 512GB 1TB 16GB TouchBar - 512 GB, Space Grey
+	{{item.product_name}}
 </div>
 <wsv wide="6px"></wsv>
 <div id="item-price">
-	Rp. 24.500.000
+	{{item.sell_price}}
 </div>
 <wsv wide="6px"></wsv>
 <div class="d-flex align-items-center">
