--- a/src/app/shared/components/catalog-card/catalog-card.component.scss
+++ b/src/app/shared/components/catalog-card/catalog-card.component.scss
@@ -35,6 +35,12 @@
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 19px;
+	overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 2; /* number of lines to show */
+   -webkit-box-orient: vertical;
+   height: 40px;
 }
 
 .catalog-card-price {
