--- a/src/app/modules/home/components/catalog-section/catalog-section.component.html
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.html
@@ -1,12 +1,12 @@
 <div>
-	<div class="d-flex justify-content-between">
-		<div id="catalog-section-label">Baju Pria</div>
+	<div class="d-flex justify-content-between pas">
+		<div id="catalog-section-label">{{products[0].category}}</div>
 		<div id="catalog-section-lihat-semua"
-			(click)="lihatSemua()">Lihat Semua</div>
+			(click)="lihatSemua(products[0].category_id,products[0].subcategory_id)">Lihat Semua</div>
 	</div>
 	<div class="white-space"></div>
 	<div class="d-flex">
-
+		<!-- {{products|json}} -->
 		<div *ngFor="let product of products;  let i=index">
 			<div *ngIf="i<6">
 				<div class="d-flex">
