--- a/src/app/shared/components/catalog-card/catalog-card.component.scss
+++ b/src/app/shared/components/catalog-card/catalog-card.component.scss
@@ -4,15 +4,16 @@
 .white-rounded-rectangle {
 	background: $putih-gelap-dikit;
 	border-radius: 4px;
-	// height: 290px;
+	min-height: 290px;
 	width: 172px;
 	margin: 0px;
 	padding-bottom: 10px;
 	background: #ffffff;
 	mix-blend-mode: normal;
-	border-radius: 4px;
+	border-radius: 10px;
 	box-shadow: $box-shadow-card;
 	cursor: pointer;
+	// border: solid greenyellow 1px;
 }
 
 .inner-padding {
@@ -33,8 +34,55 @@
 	color: $abu-abu-gelap;
 	font-style: normal;
 	font-weight: bold;
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
 	font-size: 14px;
 	line-height: 19px;
+	// min-height: 45px;
+}
+.catalog-card-disc {
+	color: $abu-abu-gelap;
+	font-style: normal;
+	font-weight: bold;
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 19px;
+	// min-height: 15px;
+}
+
+.font-disc{
+	width: 80%;
+	float:left;
+	position: relative;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 12px;
+	line-height: 16px;
+	display: flex;
+	align-items: center;
+	text-decoration-line: line-through;
+	font-feature-settings: 'kern' off;
+	color: $abu-abu-sesuatu;
+	padding-left:10px;
+}
+
+.font-numdisc{
+	background: rgba(241, 38, 39, 0.2);
+	border-radius: 4px;
+	width: 20%;
+	text-align: center;
+	float:left;
+	position: relative;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 9px;
+	line-height: 16px;
+	display: flex;
+	padding-left:5px;
+	color: $merah-terang;
 }
 
 .catalog-card-price {
