--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
@@ -1,78 +1,53 @@
 <div id="mbel">
 	<div id="loc-header">Alamat
 	</div>
-	<form>
-		<div *ngFor="let item of addresses; let i = index">
-			<div id="loc-hr-top">
+	<div *ngFor="let item of addresses; let i = index">
+		<div id="loc-hr-top">
+		</div>
+		<div id="loc-body">
+			<div id="body_address_1">{{item.address_name}}</div>
+
+			<div id="loc-body-address">
+				<div id="body_address_2">{{item.address_detail}} {{item.subdistrict}} {{item.district}}
+					{{item.province}} {{item.zipcode}}</div>
 			</div>
-<<<<<<< HEAD
-			<div id="loc-body">
-				<div id="body_address_1">{{item.address_name}}</div>
-=======
 			<div id="loc-body-manuver">
-				<!-- <ng-template *ngIf="item.is_head_office==1;then checkedaddress else uncheckedaddress"></ng-template> -->
-				<ng-template *ngIf="i==0;then checkedaddress else uncheckedaddress"></ng-template>
+				<ng-template *ngIf="item.is_head_office==1;then checkedaddress else uncheckedaddress"></ng-template>
 				<ng-template #checkedaddress>
 					<div id="loc-body-button">
 						<span class="button-location">Utama</span>
 					</div>
 					<div id="loc-body-checkbox">
->>>>>>> 0c4924d1d26ca9ac68b53b73db4ccfdcd9fcd5f4
 
-				<div id="loc-body-address">
-					<div id="body_address_2">{{item.address_detail}} {{item.subdistrict}}
-						{{item.district}}
-						{{item.province}} {{item.zipcode}}</div>
-				</div>
-				<div id="loc-body-manuver">
-					<ng-template *ngIf="item.id==picked.default_address_id;then checkedaddress else uncheckedaddress">
-					</ng-template>
-					<ng-template #checkedaddress>
-						<div id="loc-body-button">
-							<span class="button-location">Utama</span>
-						</div>
-						<div id="loc-body-checkbox">
-
-							<label class="radiyo">
-								<input type="radio"
-									checked="checked"
-									name="radio">
-								<span class="checkmark"></span>
-							</label>
-
-						</div>
-					</ng-template>
-					<ng-template #uncheckedaddress>
-						<div id="loc-body-button">&nbsp;
-						</div>
-
-<<<<<<< HEAD
-						<div id="loc-body-checkbox">
-=======
 						<label class="radiyo">
 							<input type="radio"
-								name="radio"
-								(change)="setDefaultAddress(item)">
+								checked="checked"
+								name="radio">
 							<span class="checkmark"></span>
 						</label>
->>>>>>> 0c4924d1d26ca9ac68b53b73db4ccfdcd9fcd5f4
 
-							<label class="radiyo">
-								<input type="radio"
-									name="radio"
-									(change)="changeDefault($event,item.id)">
-								<span class="checkmark"></span>
-							</label>
+					</div>
+				</ng-template>
+				<ng-template #uncheckedaddress>
+					<div id="loc-body-button">&nbsp;
+					</div>
 
-						</div>
-					</ng-template>
+					<div id="loc-body-checkbox">
+
+						<label class="radiyo">
+							<input type="radio"
+								name="radio">
+							<span class="checkmark"></span>
+						</label>
+
+					</div>
+				</ng-template>
 
 
 
-				</div>
 			</div>
 		</div>
-	</form>
+	</div>
 
 
 
@@ -82,8 +57,7 @@
 	<!-- 
 		<div id="loc-hr-bottom">
 	</div> -->
-	<div id="loc-bottom"
-		(click)="goToAkun()">
+	<div id="loc-bottom">
 		+ Tambah Alamat Baru
 	</div>
 </div>
