--- a/src/app/modules/home/components/catalog-section/catalog-section.component.scss
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.scss
@@ -8,6 +8,7 @@
 	font-weight: bold;
 	font-size: 16px;
 	line-height: 22px;
+	padding-left: 20px;
 }
 
 #catalog-section-lihat-semua {
@@ -17,6 +18,7 @@
 	font-weight: 600;
 	font-size: 14px;
 	line-height: 19px;
+	padding-right: 20px;
 	cursor: pointer;
 }
 
