--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
@@ -114,13 +114,13 @@
 	font-size: 16px;
 	line-height: 19px;
 
-	background: linear-gradient(
-		0.36deg,
-		rgba(239, 33, 58, 0.75) 21.28%,
-		rgba(226, 23, 59, 0.75) 68.11%,
-		rgba(218, 19, 19, 0.75) 123.54%
-	);
-	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.25);
+	// background: linear-gradient(
+	// 	0.36deg,
+	// 	rgba(239, 33, 58, 0.75) 21.28%,
+	// 	rgba(226, 23, 59, 0.75) 68.11%,
+	// 	rgba(218, 19, 19, 0.75) 123.54%
+	// );
+	// box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.25);
 	border-radius: 23px;
 	text-align: center;
 }
