--- a/src/app/modules/transaction/components/filter-buttons-section/filter-buttons-section.component.html
+++ b/src/app/modules/transaction/components/filter-buttons-section/filter-buttons-section.component.html
@@ -1,12 +1,16 @@
 <div class="d-flex align-items-center">
 	<div class="flex-grow-1 d-flex ">
-		<filter-dropdown-list class="flex-even"></filter-dropdown-list>
+		<filter-delivery-address class="flex-even"
+			(address_id)="updateDeliveryAddress($event)"></filter-delivery-address>
 		<wsh wide="10px"></wsh>
-		<filter-dropdown-list class="flex-even"></filter-dropdown-list>
-		<wsh wide="10px"></wsh>
+		<filter-purchaser class="flex-even"
+			(user_id)="updateUserId($event)"></filter-purchaser>
+		<wsh wide="10px">
+		</wsh>
 		<filter-input class="flex-even"
 			hint="Cari Pesanan"
 			logo="../../../../assets/image/icons/searchbutton.png"
+			(keyword)="test($event)"
 			[disabled]="false"></filter-input>
 		<wsh wide="10px"></wsh>
 		<filter-date class="flex-even"></filter-date>
