--- a/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
+++ b/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
@@ -10,7 +10,7 @@
 			</div>
 			<wsv wide="19px"></wsv>
 
-			<filter-buttons-section></filter-buttons-section>
+			<filter-buttons-section [param]="param"></filter-buttons-section>
 
 			<wsv wide="20px"></wsv>
 			<div id="horizontal-line"></div>
@@ -23,7 +23,7 @@
 
 <div class="container d-flex">
 	<div id="left-container">
-		<item-transaction></item-transaction>
+		<item-transaction [param]="param"></item-transaction>
 		<wsv wide="60px"></wsv>
 	</div>
 
