--- a/src/app/shared/components/filter-input/filter-input.component.html
+++ b/src/app/shared/components/filter-input/filter-input.component.html
@@ -1,10 +1,12 @@
 <div id="filter-input-wrapper"
 	class="d-flex align-items-center">
-	<input id="input-box"
+	<input #searchbox
+		id="input-box"
 		class="flex-grow-1"
 		type="text"
 		[attr.disabled]="disabled ? '' : null"
-		[placeholder]="hint">
+		[placeholder]="hint"
+		(change)=getKeyword(searchbox.value)>
 	<img id="search-logo"
 		[src]="logo">
 
