--- a/src/app/shared/components/address-section/address-section.component.scss
+++ b/src/app/shared/components/address-section/address-section.component.scss
@@ -9,7 +9,7 @@
 	color: white;
 	height: 50px;
 	position: relative;
-	border-radius: 8px;
+	border-radius: 30px !important;
 	background: url('../../../../assets/image/icons/location-icon.png') #333132
 		no-repeat;
 	background-position: left 20px center;
