--- a/src/app/shared/components/catalog-card/catalog-card.component.scss
+++ b/src/app/shared/components/catalog-card/catalog-card.component.scss
@@ -7,6 +7,7 @@
 	// height: 290px;
 	width: 187px;
 	margin: 0px;
+	height: 290px;
 	padding-bottom: 10px;
 	background: #ffffff;
 	mix-blend-mode: normal;
