--- a/src/app/modules/transaction/components/filter-date/filter-date.component.scss
+++ b/src/app/modules/transaction/components/filter-date/filter-date.component.scss
@@ -98,3 +98,11 @@
 
 	color: $abu-abu-gelap;
 }
+
+#date-picker-wrapper {
+	background: #ffffff;
+	border: 0.5px solid #a9a9a9;
+	box-sizing: border-box;
+	border-radius: 20px;
+	padding: 14px;
+}
