add event on remove button

--- a/src/app/modules/cart/components/item-list/item-list.component.html
+++ b/src/app/modules/cart/components/item-list/item-list.component.html
@@ -21,7 +21,7 @@
 						<wsh wide="150px"></wsh>
 						<img id="trash-can"
 							src="../../../../../assets/image/icons/trash_can.png"
-							(click)="deleteItem(dangerTpl)" />
+							(click)="deleteItem(dangerTpl, item)" />
 					</div>
 				</cart-item-list>
 			</div>
@@ -37,7 +37,7 @@
 				<wsh wide="20.39px"></wsh>
 				<img id="trash-can-2"
 					src="../../../../../assets/image/icons/trash_can.png"
-					(click)="deleteItem(dangerTpl)" />
+					(click)="deleteItem(dangerTpl, item)" />
 			</div>
 
 		</div>
