--- a/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
+++ b/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
@@ -23,7 +23,7 @@
 
 <div class="container d-flex">
 	<div id="left-container">
-		<item-transaction [param]="param"></item-transaction>
+		<item-transaction [items]="items"></item-transaction>
 		<wsv wide="60px"></wsv>
 	</div>
 
