badges count on header, sisa saldo kredit di request approval

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -28,7 +28,8 @@
 							id="div-approval"
 							(click)="goToPage('./approval')">
 							<div class="warn-label">Approval</div>
-							<div class="warn-notif show">6</div>
+							<div id="item-to-approve"
+								class="warn-notif show">0</div>
 						</div>
 
 
@@ -44,7 +45,8 @@
 							<img src="../../../../assets/image/icons/cart-logo.svg"
 								style="width:25px;"
 								id="headers-cart">
-							<div class="warn-notife show">2</div>
+							<div id="item-count"
+								class="warn-notife show">0</div>
 
 						</div>
 					</div>
