--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -3,7 +3,8 @@
 	<div class="font1">Kredit Tersedia</div>
 	<div class="d-flex justify-content-between harga-per-item">
 		<div class="font1"></div>
-		<div class="font1">{{pertotalan.saldo|rupiah}}</div>
+		<!-- <div class="font1">{{pertotalan.saldo|rupiah}}</div> -->
+		<div class="font1">Rp. {{datacompany?.credit_rp | number}}</div>
 	</div>
 </div>
 <div id="div-price-below">
