--- a/src/app/modules/transaction/components/status-button/status-button.component.html
+++ b/src/app/modules/transaction/components/status-button/status-button.component.html
@@ -1,1 +1,1 @@
-<div [ngClass]="selected == label ? 'status-label-selected' : 'status-label'">{{label}}</div>
+<div [ngClass]="selected == label ? 'status-label-selected' : 'status-label'">{{label.status_name}}</div>
