--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -1,6 +1,7 @@
 <div class="container">
 	<div class="d-flex">
-		<div id="pilih-produk-container-1">
+		<div id="pilih-produk-container-1"
+			style="padding-bottom: 20px;">
 			<filter-card></filter-card>
 		</div>
 		<div id="pilih-produk-container-2"
@@ -19,7 +20,7 @@
 </div>
 
 <div class="footer">
-	<footer-bar></footer-bar>
-	<footer></footer>
+	<!-- <footer-bar></footer-bar> -->
+	<!-- <footer></footer> -->
 
 </div>
