--- a/src/app/shared/components/footer-bar/footer-bar.component.html
+++ b/src/app/shared/components/footer-bar/footer-bar.component.html
@@ -4,18 +4,22 @@
 
 <div id="footer-bar-container"
 	class="d-flex justify-content-around align-items-center">
-	<img src="../../../../assets/image/logo/logo-nest-red.png"
-		id="footer-logo">
+	<div>
+		<img src="../../../../assets/image/logo/logofooter.svg"
+			id="footer-logo">
+	</div>
+
 	<div class="d-flex justify-content-around align-items-center">
-		<footer-feature image="../../../../assets/image/logo/thumbs_up_red_circle.png"
+
+		<footer-feature image="../../../../assets/image/logo/ft1.png"
 			titleOne="Jaminan"
 			titleTwo="Pengiriman"></footer-feature>
 		<div class="white-space-60px"></div>
-		<footer-feature image="../../../../assets/image/logo/money-red_circle.png"
+		<footer-feature image="../../../../assets/image/logo/ft2.png"
 			titleOne="Kemudahan"
 			titleTwo="Pembayaran"></footer-feature>
 		<div class="white-space-60px"></div>
-		<footer-feature image="../../../../assets/image/logo/time-red-circle.png"
+		<footer-feature image="../../../../assets/image/logo/ft3.png"
 			titleOne="Respon"
 			titleTwo="Cepat"></footer-feature>
 	</div>
