--- a/src/app/shared/components/footer-feature/footer-feature.component.html
+++ b/src/app/shared/components/footer-feature/footer-feature.component.html
@@ -1,7 +1,7 @@
 <div style="text-align: center;">
 	<img id="footer_feature_logo"
 		src="{{image}}">
-	<div class="white-space-12px"></div>
+	<!-- <div class="white-space-12px"></div>
 	<div class="footer-feature-label">{{titleOne}}</div>
-	<div class="footer-feature-label">{{titleTwo}}</div>
+	<div class="footer-feature-label">{{titleTwo}}</div> -->
 </div>
