--- a/src/app/shared/components/footer-bar/footer-bar.component.scss
+++ b/src/app/shared/components/footer-bar/footer-bar.component.scss
@@ -3,10 +3,31 @@
 #footer-bar-container {
 	// margin-top: 90px;
 	height: 200px;
-	background-color: $putih-tok;
 	// border: 0.5px solid $abu-abu-aspal;
 	box-shadow: 0px -1px 7px -2px rgba(0,0,0,0.4);
 	margin-top:2px;
+	// border: solid black 2px;
+	// background-color: $color-primary;
+background-color: $putih-tok;
+}
+
+.logos{
+	float:left;
+	position: relative;
+	width: 20%;
+	height: 200px;
+	margin: 0px;
+	padding: 0px;
+	border: solid blue 1px;
+}
+
+.feat{
+	width:70%;
+	float:left;
+	position: relative;
+	height: 200px;
+	background-color: $putih-tok;
+	border: solid blue 1px;
 }
 
 #kotakemail{
