--- a/src/app/shared/components/footer-customer-support/footer-customer-support.component.html
+++ b/src/app/shared/components/footer-customer-support/footer-customer-support.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-start">
 	<img id="cs_logo"
-		src="../../../../assets/image/logo/headset_logo.png">
-	<div>
+		src="../../../../assets/image/logo/f-cs.png">
+	<!-- <div>
 		<div>Customer Support</div>
 		<div>08xx xxxx xxxx</div>
-	</div>
+	</div> -->
 </div>
