manage badge of number open-trx

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -37,7 +37,8 @@
 							id="div-transaksi"
 							(click)="goToPage('./transaction')">
 							<div class="warn-label">Transaksi</div>
-							<div class="warn-notif show">2</div>
+							<div id="open-trx"
+								class="warn-notif show">0</div>
 						</div>
 						<div class="p-2 flex-fill bd-highlight"
 							id="div-cart"
