--- a/src/app/modules/transaction/components/badge/badge.component.html
+++ b/src/app/modules/transaction/components/badge/badge.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="(show == true)? 'noshowing' : 'showing'">
 	<div id="badge-wrapper"
 		class="d-flex align-items-center justify-content-center">
-		{{label.statustrx}}
+		{{label.status}}
 	</div>
 </div>
 
