--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
@@ -57,7 +57,7 @@
 			<div class="title-2">
 				<badge [label]='item'
 					[show]='item.show'
-					[statusprocess]='item.statusprocess'></badge>
+					[statusprocess]='item.status'></badge>
 			</div>
 		</div>
 		<div class="d-flex col-4-trx-item align-items-end">
