--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -93,3 +93,8 @@
 		[className]="buttonDisable ? 'btn btn-price-next' : 'btn btn-price-abu2'"
 		(click)="clickButtonLabel()">{{buttonLabel}}</button>
 </div>
+
+<wsv wide="20px"></wsv>
+<div id="label-warning-tidak-diproses">
+	*Barang out of stock & area tidak terjangkau tidak akan diproses
+</div>
