--- a/src/app/shared/components/box-cart-price/box-cart-price.component.scss
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.scss
@@ -119,3 +119,16 @@
 .harga-per-item {
 	width: 155px;
 }
+
+#label-warning-tidak-diproses {
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: -0.01em;
+
+	/* Primary Color */
+
+	color: #db0a2a;
+}
