--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -10,9 +10,12 @@
 			<address-section borderRadius='20px'
 				wide='75%'></address-section>
 			<div class="white-space"></div>
-			<div id="label-total-produk">3411 produk <span id="choosen-produk">"sweather"</span> di semua Kategori
+			<div id="label-total-produk">3411 produk <span id="choosen-produk">"{{keyword}}"</span> di semua Kategori
 			</div>
+
 			<div class="white-space"></div>
+
+
 			<app-catalog [items]="items"></app-catalog>
 		</div>
 	</div>
