dialog waiting approval

--- a/src/app/modules/home/components/dialog-waiting-approval/dialog-waiting-approval.component.html
+++ b/src/app/modules/home/components/dialog-waiting-approval/dialog-waiting-approval.component.html
@@ -2,14 +2,11 @@
 
 
 <div id="popup-wording">
-	<p>Yakin ingin keluar dari Halaman ini?</p>
+	<p>{{nApproval}} Barang Menunggu Konfirmasi Approval Anda</p>
 </div>
 <wsv wide="25px"></wsv>
 <div id="popup-option"
-	class="d-flex justify-content-between">
+	class="d-flex justify-content-center">
 	<div id="ok-button"
-		(click)="ok()">Keluar Halaman</div>
-	<div id="cancel-button"
-		(click)="cancel()">Tetap Di Halaman Ini</div>
-
+		(click)="ok()">Approval</div>
 </div>
