--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -102,10 +102,13 @@
 		<div id="right-fixed">
 			<div class="d-flex">
 				<wsh wide="57px"></wsh>
-				<box-cart-price [selectedItems]="selectedItems"
-					[pertotalan]="pertotalan"
-					[buttonLabel]="buttonSelanjutnyaLabel()"
-					[buttonDisable]="!cartIsEmpty()"></box-cart-price>
+				<div *ngIf="isManager()">
+					<box-cart-price [selectedItems]="selectedItems"
+						[pertotalan]="pertotalan"
+						[buttonLabel]="buttonSelanjutnyaLabel()"
+						[buttonDisable]="!cartIsEmpty()"></box-cart-price>
+				</div>
+
 			</div>
 
 		</div>
