fix approval layout

--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -3,6 +3,8 @@
 
 		<div id="top-fixed"
 			class="bg-10">
+
+			<!-- <div id="keranjang-label">APPROVAL</div> -->
 			<wsv wide="7px"></wsv>
 			<div class="d-flex justify-content-center">
 				<item-summary-dropdown [list]="listApprovals"
