clean up box-cart-price

--- a/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
@@ -39,7 +39,7 @@
 					<box-cart-price [pertotalan]="pertotalan"
 						[selectedItems]="selectedItems"
 						buttonLabel="Selanjutnya"
-						[selectedItems]="selectedItems"></box-cart-price>
+						(buttonBoxCartPriceClick)="selanjutnyaClick()"></box-cart-price>
 				</div>
 
 			</div>
