--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -21,7 +21,8 @@
 				<wsh wide="57px"></wsh>
 				<box-cart-price [pertotalan]="pertotalan"
 					[selectedItems]="selectedItems"
-					buttonLabel="Request Approval"></box-cart-price>
+					buttonLabel="Request Approval"
+					(buttonBoxCartPriceClick)="selanjutnyaClick()"></box-cart-price>
 			</div>
 
 		</div>
