--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.scss
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.scss
@@ -1,10 +1,11 @@
 @import '../../../../../styles/variables/colors';
 
 #filter-card-container {
-	padding-top: 100px;
+	padding-top: 60px;
 	padding-left: 34px;
 	padding-right: 46px;
-	padding-bottom: 40px;
+	// padding-bottom: 40px;
+	height: 90vh;
 }
 
 #filter-label {
