--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -10,10 +10,16 @@
 			<address-section borderRadius='20px'
 				wide='75%'></address-section>
 			<div class="white-space"></div>
-			<div id="label-total-produk">3411 produk <span id="choosen-produk">"{{keyword}}"</span> di semua Kategori
+			<div id="label-total-produk">{{qtyproduk}} produk <span id="choosen-produk">"{{keyword}}"</span> di semua
+				Kategori
 			</div>
-
 			<div class="white-space"></div>
+			<!-- *ngIf="IsWait" -->
+			<mat-progress-spinner mode="indeterminate"
+				diameter="30"
+				color="warn"
+				*ngIf="IsWait"></mat-progress-spinner>
+
 
 
 			<app-catalog [items]="items"></app-catalog>
@@ -22,8 +28,8 @@
 
 </div>
 
-<div class="footer">
-	<!-- <footer-bar></footer-bar> -->
-	<!-- <footer></footer> -->
+<!-- <div class="footer"> -->
+<!-- <footer-bar></footer-bar> -->
+<!-- <footer></footer> -->
 
-</div>
+<!-- </div> -->
