nest update 2020/10/08 - Max & Min Price Filter

--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
@@ -12,12 +12,16 @@
 		type="text"
 		class="textbox-search"
 		placeholder="Minimum"
+		(keyup.enter)="carilagi(minimum.value,maximum.value)"
+		autocomplete="off"
 		#minimum>
 	<div class="filter-card-underline"></div>
 	<input id="maximum-input"
 		type="text"
 		class="textbox-search"
 		placeholder="Maximum"
+		(keyup.enter)="carilagi(minimum.value,maximum.value)"
+		autocomplete="off"
 		#maximum>
 
 	<div class="filter-card-underline"></div>
