--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
@@ -9,7 +9,7 @@
 	<div class="filter-card-underline"></div>-->
 	<div id="filter-label-2">Harga</div>
 	<input id="minimum-input"
-		type="text"
+		type="number"
 		class="textbox-search"
 		placeholder="Minimum"
 		(keyup.enter)="carilagi(minimum.value,maximum.value)"
@@ -17,7 +17,7 @@
 		#minimum>
 	<div class="filter-card-underline"></div>
 	<input id="maximum-input"
-		type="text"
+		type="number"
 		class="textbox-search"
 		placeholder="Maximum"
 		(keyup.enter)="carilagi(minimum.value,maximum.value)"
