Req Approval Address

--- a/src/app/modules/request-approval/components/request-approval-address/request-approval-address.component.html
+++ b/src/app/modules/request-approval/components/request-approval-address/request-approval-address.component.html
@@ -1,5 +1,6 @@
 <div id="request-approval">
 	<div class="rap-row"><b>{{username}}</b></div>
-	<div class="rap-row"><b>{{company}}</b></div>
 	<div class="rap-row">{{address}}</div>
+	<div class="rap-row">{{province}}</div>
+	<div class="rap-row">{{phone}}</div>
 </div>
